tests/functional/lang/eval-fail-filterSource-4.err.exp
error:
       … while calling the 'filterSource' builtin
         at /pwd/lang/eval-fail-filterSource-4.nix:1:1:
            1| builtins.filterSource (_: 1) ./.
             | ^
            2|

       … while adding path '/pwd/lang'

       error: attempt to call something which is not a function but an integer: 1
